--- a/app/src/main/res/layout-sw672dp/content_main.xml
+++ b/app/src/main/res/layout-sw672dp/content_main.xml
@@ -3,15 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
     tools:context=".MainActivity">
-
     <FrameLayout
-        android:id="@+id/list_small_fragmnet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:id="@+id/list_big_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
+    <ScrollView
+        android:id="@+id/content_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="2"/>
 </LinearLayout>
