Se ha terminado el content fragment y se ha iniciado la actividad para ingresar un nuevo partido

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="generalPadding">8dp</dimen>
     <dimen name="cardView">4dp</dimen>
+    <dimen name="bigText">32sp</dimen>
 </resources>
