--- a/app/src/main/res/layout/list_item_match.xml
+++ b/app/src/main/res/layout/list_item_match.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorBack"
-            android:textSize="32sp"
+            android:textSize="@dimen/bigText"
             android:layout_margin="@dimen/generalPadding"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
