Ahora la aplicacion puede ingresar datos, ademas de que ya se muestran :D

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="generalPadding">8dp</dimen>
     <dimen name="cardView">4dp</dimen>
     <dimen name="bigText">32sp</dimen>
+    <dimen name="superBigText">36sp</dimen>
+    <dimen name="heightView">275dp</dimen>
+    <dimen name="normalText">18dp</dimen>
 </resources>
