--- a/app/src/main/res/layout/activity_new_match.xml
+++ b/app/src/main/res/layout/activity_new_match.xml
@@ -1,10 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout>
+    <data>
+        <variable
+            name="score"
+            type="com.mapache.basketballcounter.pojos.Score"/>
+    </data>
+    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".NewMatchActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/teamA_et"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Team A"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:layout_margin="@dimen/generalPadding"/>
+                    <EditText
+                        android:id="@+id/teamB_et"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Team B"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:layout_margin="@dimen/generalPadding"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_weight="1">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@{score.scoreA}"
+                            android:textColor="@color/colorBack"
+                            android:textSize="@dimen/superBigText"
+                            android:layout_margin="@dimen/generalPadding"/>
+                        <Button
+                            android:id="@+id/teamA_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="+3 POINT"
+                            android:layout_margin="@dimen/generalPadding"
+                            android:onClick="scorePlus"/>
+                        <Button
+                            android:id="@+id/teamA_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="+2 POINT"
+                            android:layout_margin="@dimen/generalPadding"
+                            android:onClick="scorePlus"/>
+                        <Button
+                            android:id="@+id/teamA_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="FREE THROW"
+                            android:layout_margin="@dimen/generalPadding"
+                            android:onClick="scorePlus"/>
+                    </LinearLayout>
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="@dimen/heightView"
+                        android:background="@color/colorPrimaryDark" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_weight="1">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@{score.scoreB}"
+                            android:textColor="@color/colorBack"
+                            android:textSize="@dimen/superBigText"
+                            android:layout_margin="@dimen/generalPadding"/>
+                        <Button
+                            android:id="@+id/teamB_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="+3 POINT"
+                            android:layout_margin="@dimen/generalPadding"
+                            android:onClick="scorePlus"/>
+                        <Button
+                            android:id="@+id/teamB_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="+2 POINT"
+                            android:layout_margin="@dimen/generalPadding"
+                            android:onClick="scorePlus"/>
+                        <Button
+                            android:id="@+id/teamB_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="FREE THROW"
+                            android:layout_margin="@dimen/generalPadding"
+                            android:onClick="scorePlus"/>
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="@dimen/generalPadding">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Date: "
+                        android:textSize="@dimen/normalText"/>
+                    <EditText
+                        android:id="@+id/date_et"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="DD/MM/YYYY"
+                        android:inputType="date"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/generalPadding"
+                        android:text="Time: "
+                        android:textSize="@dimen/normalText"/>
+                    <EditText
+                        android:id="@+id/time_et"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="HH/MM"
+                        android:inputType="datetime"/>
+                    <Button
+                        android:id="@+id/action_save"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="save"
+                        android:layout_margin="@dimen/generalPadding"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+</layout>
