--- a/app/src/main/res/layout/list_item_match.xml
+++ b/app/src/main/res/layout/list_item_match.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/generalPadding">
+    android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,12 +11,58 @@
         card_view:cardUseCompatPadding="true"
         card_view:cardElevation="@dimen/cardView"
         card_view:cardCornerRadius="@dimen/cardView" >
-        <TextView
-            android:id="@+id/teamVs"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorBack"
-            android:textSize="@dimen/bigText"
-            android:layout_margin="@dimen/generalPadding"/>
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/teamVs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/normalBigText"
+                android:padding="@dimen/generalPadding"
+                android:background="@color/colorPrimary"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@color/colorPrimaryLight"
+                android:paddingHorizontal="@dimen/generalPadding"
+                android:paddingBottom="@dimen/generalPadding">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Date: "
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/smallText"/>
+                    <TextView
+                        android:id="@+id/list_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/smallText"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Time: "
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/smallText"/>
+                    <TextView
+                        android:id="@+id/list_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/smallText"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
