--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#2B2B2B</color>
     <color name="colorPrimaryDark">#2B2B2B</color>
-    <color name="colorAccent">#FF7C00</color>
+    <color name="colorPrimaryLight">#505050</color>
+    <color name="colorAccent">#FF6200</color>
     <color name="colorBack">#000</color>
+    <color name="colorWhite">#fff</color>
 </resources>
