--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2B2B2B</color>
     <color name="colorPrimaryDark">#2B2B2B</color>
-    <color name="colorPrimaryLight">#505050</color>
+    <color name="colorPrimaryLight">#3C3F41</color>
     <color name="colorAccent">#FF6200</color>
     <color name="colorBack">#000</color>
     <color name="colorWhite">#fff</color>
